--- a/metadata/md5-cache/app-office/msoffice-web-0.0.1
+++ b/metadata/md5-cache/app-office/msoffice-web-0.0.1
@@ -2,7 +2,7 @@ DEFINED_PHASES=install
 DESCRIPTION=Web launchers for Microsoft Office
 EAPI=7
 HOMEPAGE=https://office.com
-IUSE=+word +excel +powerpoint
+IUSE=+word +excel +powerpoint +onenote
 KEYWORDS=amd64 x86
 SLOT=0
-_md5_=099abe877dde85c700642991f1965d04
+_md5_=29bc970cf90f0be8d7613188d93571d4
