--- a/metadata/md5-cache/media-gfx/fbcat-0.5.1
+++ b/metadata/md5-cache/media-gfx/fbcat-0.5.1
@@ -1,11 +1,11 @@
 DEFINED_PHASES=-
-DEPEND=media-libs/netpbm sys-apps/kbd !media-gfx/fbgrad
+DEPEND=media-libs/netpbm sys-apps/kbd !media-gfx/fbgrab
 DESCRIPTION=Framebuffer grabber
 EAPI=7
 HOMEPAGE=https://github.com/jwilk/fbcat/
 KEYWORDS=amd64 x86
 LICENSE=GPL-2
-RDEPEND=media-libs/netpbm sys-apps/kbd !media-gfx/fbgrad
+RDEPEND=media-libs/netpbm sys-apps/kbd !media-gfx/fbgrab
 SLOT=0
 SRC_URI=https://github.com/jwilk/fbcat/releases/download/0.5.1/fbcat-0.5.1.tar.gz
-_md5_=af4c256bc909e0469f0da4a05107a2a2
+_md5_=746cf51915b72165df3f8a346d973349
