--- a/metadata/md5-cache/app-misc/authy-1.8.3
+++ b/metadata/md5-cache/app-misc/authy-1.8.3
@@ -1,12 +1,14 @@
 BDEPEND=sys-fs/squashfs-tools-ng[xz]
 DEFINED_PHASES=compile install prepare
-DEPEND=dev-libs/libdbusmenu dev-libs/libappindicator dev-libs/nss x11-libs/gtk+:3
+DEPEND=media-video/ffmpeg dev-libs/libdbusmenu dev-libs/libappindicator dev-libs/nss x11-libs/gtk+:3 sys-apps/dbus dev-libs/libbsd dev-libs/expat sys-apps/keyutils sys-libs/e2fsprogs-libs media-libs/libglvnd
 DESCRIPTION=2FA software
 EAPI=7
 HOMEPAGE=https://authy.com/
+INHERIT=desktop
 KEYWORDS=~amd64
 LICENSE=all-rights-reserved
-RDEPEND=dev-libs/libdbusmenu dev-libs/libappindicator dev-libs/nss x11-libs/gtk+:3
+RDEPEND=media-video/ffmpeg dev-libs/libdbusmenu dev-libs/libappindicator dev-libs/nss x11-libs/gtk+:3 sys-apps/dbus dev-libs/libbsd dev-libs/expat sys-apps/keyutils sys-libs/e2fsprogs-libs media-libs/libglvnd
 SLOT=0
 SRC_URI=https://api.snapcraft.io/api/v1/snaps/download/H8ZpNgIoPyvmkgxOWw5MSzsXK1wRZiHn_5.snap
-_md5_=1f77a6c55f0f3aa19daefcce2eb51e70
+_eclasses_=desktop	c0d27bf73aa08ca05b663dbd31fbef28
+_md5_=4ee362c8a5a076b20d37a9b4d23f4e58
