--- a/metadata/md5-cache/net-misc/networkmanager-dmenu-1.6.1
+++ b/metadata/md5-cache/net-misc/networkmanager-dmenu-1.6.1
@@ -1,15 +1,15 @@
 DEFINED_PHASES=install
-DEPEND=net-misc/networkmanager dmenu? ( x11-misc/dmenu ) rofi? ( x11-misc/rofi ) dev-python/pygobject python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_9? ( dev-lang/python:3.9 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_8(-)?,python_targets_python3_9(-)?,-python_single_target_python3_7(-),-python_single_target_python3_8(-),-python_single_target_python3_9(-)]
+DEPEND=net-misc/networkmanager dmenu? ( x11-misc/dmenu ) rofi? ( x11-misc/rofi ) dev-python/pygobject python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_9? ( dev-lang/python:3.9 ) >=dev-lang/python-exec-2:=[python_targets_python3_8(-)?,python_targets_python3_9(-)?,-python_single_target_python3_8(-),-python_single_target_python3_9(-)]
 DESCRIPTION=Control networkmanager using DMENU
 EAPI=7
 HOMEPAGE=https://github.com/firecat53/networkmanager-dmenu
 INHERIT=desktop python-r1
-IUSE=+dmenu rofi python_targets_python3_7 python_targets_python3_8 python_targets_python3_9
+IUSE=+dmenu rofi python_targets_python3_8 python_targets_python3_9
 KEYWORDS=amd64 x86
 LICENSE=MIT
-RDEPEND=net-misc/networkmanager dmenu? ( x11-misc/dmenu ) rofi? ( x11-misc/rofi ) dev-python/pygobject python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_9? ( dev-lang/python:3.9 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_8(-)?,python_targets_python3_9(-)?,-python_single_target_python3_7(-),-python_single_target_python3_8(-),-python_single_target_python3_9(-)]
-REQUIRED_USE=^^ ( dmenu rofi ) || ( python_targets_python3_7 python_targets_python3_8 python_targets_python3_9 )
+RDEPEND=net-misc/networkmanager dmenu? ( x11-misc/dmenu ) rofi? ( x11-misc/rofi ) dev-python/pygobject python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_9? ( dev-lang/python:3.9 ) >=dev-lang/python-exec-2:=[python_targets_python3_8(-)?,python_targets_python3_9(-)?,-python_single_target_python3_8(-),-python_single_target_python3_9(-)]
+REQUIRED_USE=^^ ( dmenu rofi ) || ( python_targets_python3_8 python_targets_python3_9 )
 SLOT=0
 SRC_URI=https://github.com/firecat53/networkmanager-dmenu/archive/v1.6.1.tar.gz -> networkmanager-dmenu-1.6.1.tar.gz
-_eclasses_=desktop	c0d27bf73aa08ca05b663dbd31fbef28	multibuild	6b3d5ee849dafe6cdfd7b859c211fb01	toolchain-funcs	24921b57d6561d87cbef4916a296ada4	multilib	d410501a125f99ffb560b0c523cd3d1e	python-utils-r1	d273d56dc725880edbeb1f6389faf5f1	python-r1	26e4ad0a4190b14f70973dc253e86535
+_eclasses_=desktop	c0d27bf73aa08ca05b663dbd31fbef28	multibuild	6b3d5ee849dafe6cdfd7b859c211fb01	toolchain-funcs	24921b57d6561d87cbef4916a296ada4	multilib	d410501a125f99ffb560b0c523cd3d1e	python-utils-r1	6e84b7d3d8d0bb1ee12774f4a66909e2	python-r1	26e4ad0a4190b14f70973dc253e86535
 _md5_=2cc87dcdef69213f98dcd585956b219f
